--- a/BreakDown-ear/pom.xml
+++ b/BreakDown-ear/pom.xml
@@ -15,7 +15,7 @@
   <dependencies>
   	<dependency>
   		<groupId>hu.unideb.inf.dandy.szd</groupId>
-  		<artifactId>BreakDown-data</artifactId>
+  		<artifactId>BreakDown-jpa</artifactId>
   		<version>${break.down.version}</version>
   	</dependency>
   	<dependency>
