--- a/BreakDown-jpa/pom.xml
+++ b/BreakDown-jpa/pom.xml
@@ -6,7 +6,7 @@
 		<artifactId>BreakDown</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
-	<artifactId>BreakDown-data</artifactId>
+	<artifactId>BreakDown-jpa</artifactId>
 
 	<dependencies>
 		<dependency>
@@ -16,6 +16,14 @@
 		<dependency>
 			<groupId>org.hibernate.javax.persistence</groupId>
 			<artifactId>hibernate-jpa-2.0-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-web</artifactId>
 		</dependency>
 	</dependencies>
 </project>
