--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,10 @@
 		<module>BreakDown-services</module>
 		<module>BreakDown-ear</module>
 	</modules>
+	
+	<properties>
+		<java.version>1.8</java.version>
+	</properties>
 
 	<dependencyManagement>
 		<dependencies>
@@ -53,6 +57,15 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-ear-plugin</artifactId>
 					<version>2.10.1</version>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<version>3.6.1</version>
+					<configuration>
+						<source>${java.version}</source>
+						<target>${java.version}</target>
+					</configuration>
 				</plugin>
 			</plugins>
 		</pluginManagement>
