--- a/BreakDown-web/src/main/webapp/WEB-INF/web.xml
+++ b/BreakDown-web/src/main/webapp/WEB-INF/web.xml
@@ -1,15 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee
-		 http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
-         version="3.1">
-	<servlet>
-		<servlet-name>BreakDownApp</servlet-name>	
-		<servlet-class>hu.unideb.inf.dandy.szd</servlet-class>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>breakdown</servlet-name>
-		<url-pattern>/</url-pattern>
-	</servlet-mapping>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xmlns="http://xmlns.jcp.org/xml/ns/javaee"
+	xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
+	version="3.1">
 </web-app>
