--- a/pom.xml
+++ b/pom.xml
@@ -29,10 +29,11 @@
 				<artifactId>spring-data-jpa</artifactId>
 				<version>1.11.0.RELEASE</version>
 			</dependency>
+			<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-web -->
 			<dependency>
 				<groupId>org.springframework.security</groupId>
 				<artifactId>spring-security-web</artifactId>
-				<version>4.2.2.BUILD-SNAPSHOT</version>
+				<version>4.2.2.RELEASE</version>
 			</dependency>
 			<!-- https://mvnrepository.com/artifact/org.hibernate.javax.persistence/hibernate-jpa-2.0-api -->
 			<dependency>
@@ -52,8 +53,12 @@
 				<artifactId>postgresql</artifactId>
 				<version>9.1-901-1.jdbc4</version>
 			</dependency>
-
-
+			<!-- https://mvnrepository.com/artifact/javax.servlet/servlet-api -->
+			<dependency>
+				<groupId>javax.servlet</groupId>
+				<artifactId>javax.servlet-api</artifactId>
+				<version>3.0.1</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
@@ -74,6 +79,11 @@
 						<source>${java.version}</source>
 						<target>${java.version}</target>
 					</configuration>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-war-plugin</artifactId>
+					<version>3.0.0</version>
 				</plugin>
 			</plugins>
 		</pluginManagement>
