--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
 
 	<properties>
 		<java.version>1.8</java.version>
+		<app.version>0.0.1-SNAPSHOT</app.version>
 	</properties>
 
 	<dependencyManagement>
