--- a/BreakDown-services/pom.xml
+++ b/BreakDown-services/pom.xml
@@ -15,4 +15,13 @@
 			<version>${app.version}</version>
 		</dependency>
 	</dependencies>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-pmd-plugin</artifactId>
+			</plugin>
+		</plugins>
+	</build>
 </project>
