--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,11 @@
 					<artifactId>maven-war-plugin</artifactId>
 					<version>3.0.0</version>
 				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-pmd-plugin</artifactId>
+					<version>3.7</version>
+				</plugin>
 			</plugins>
 		</pluginManagement>
 	</build>
