--- a/BreakDown-web/pom.xml
+++ b/BreakDown-web/pom.xml
@@ -19,6 +19,10 @@
 			<artifactId>spring-security-web</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-config</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
 		</dependency>
