--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,12 @@
 				<artifactId>spring-security-web</artifactId>
 				<version>4.2.2.RELEASE</version>
 			</dependency>
-			
+			<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-config -->
+			<dependency>
+				<groupId>org.springframework.security</groupId>
+				<artifactId>spring-security-config</artifactId>
+				<version>4.2.2.RELEASE</version>
+			</dependency>
 			<!-- https://mvnrepository.com/artifact/org.hibernate.javax.persistence/hibernate-jpa-2.0-api -->
 			<dependency>
 				<groupId>org.hibernate.javax.persistence</groupId>
