--- a/BreakDown-web/pom.xml
+++ b/BreakDown-web/pom.xml
@@ -36,6 +36,10 @@
 			<artifactId>BreakDown-jpa</artifactId>
 			<version>${app.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-taglibs</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
