--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,12 @@
 				<artifactId>javax.servlet-api</artifactId>
 				<version>3.0.1</version>
 			</dependency>
+			<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-taglibs -->
+			<dependency>
+				<groupId>org.springframework.security</groupId>
+				<artifactId>spring-security-taglibs</artifactId>
+				<version>4.2.2.RELEASE</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
