--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,12 @@
 				<artifactId>spring-security-taglibs</artifactId>
 				<version>4.2.2.RELEASE</version>
 			</dependency>
+			<!-- https://mvnrepository.com/artifact/jstl/jstl -->
+			<dependency>
+				<groupId>jstl</groupId>
+				<artifactId>jstl</artifactId>
+				<version>1.2</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
