--- a/BreakDown-services/pom.xml
+++ b/BreakDown-services/pom.xml
@@ -14,6 +14,10 @@
 			<artifactId>BreakDown-jpa</artifactId>
 			<version>${app.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-config</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
