--- a/pom.xml
+++ b/pom.xml
@@ -66,17 +66,11 @@
 				<artifactId>javax.servlet-api</artifactId>
 				<version>3.0.1</version>
 			</dependency>
-			<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-taglibs -->
+			<!-- https://mvnrepository.com/artifact/org.webjars/angularjs -->
 			<dependency>
-				<groupId>org.springframework.security</groupId>
-				<artifactId>spring-security-taglibs</artifactId>
-				<version>4.2.2.RELEASE</version>
-			</dependency>
-			<!-- https://mvnrepository.com/artifact/jstl/jstl -->
-			<dependency>
-				<groupId>jstl</groupId>
-				<artifactId>jstl</artifactId>
-				<version>1.2</version>
+				<groupId>org.webjars</groupId>
+				<artifactId>angularjs</artifactId>
+				<version>1.6.2</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
