--- a/BreakDown-jpa/pom.xml
+++ b/BreakDown-jpa/pom.xml
@@ -25,6 +25,10 @@
 			<groupId>postgresql</groupId>
 			<artifactId>postgresql</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.modelmapper</groupId>
+			<artifactId>modelmapper</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
