--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,11 @@
 				<artifactId>angularjs</artifactId>
 				<version>1.6.2</version>
 			</dependency>
+			<dependency>
+				<groupId>org.modelmapper</groupId>
+				<artifactId>modelmapper</artifactId>
+				<version>0.7.8</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
