--- a/BreakDown-ear/pom.xml
+++ b/BreakDown-ear/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>hu.unideb.inf.dandy.szd</groupId>
-    <artifactId>BreakDown</artifactId>
+    <artifactId>breakdown</artifactId>
     <version>0.0.1-SNAPSHOT</version>
   </parent>
   <artifactId>BreakDown-ear</artifactId>
