--- a/BreakDown-ear/pom.xml
+++ b/BreakDown-ear/pom.xml
@@ -1,41 +1,52 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>hu.unideb.inf.dandy.szd</groupId>
-    <artifactId>breakdown</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-  </parent>
-  <artifactId>BreakDown-ear</artifactId>
-  <packaging>ear</packaging>
-  
-  <dependencies>
-  	<dependency>
-  		<groupId>hu.unideb.inf.dandy.szd</groupId>
-  		<artifactId>BreakDown-jpa</artifactId>
-  		<version>${app.version}</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>hu.unideb.inf.dandy.szd</groupId>
-  		<artifactId>BreakDown-web</artifactId>
-  		<version>${app.version}</version>
-  		<type>war</type>
-  	</dependency>
-  	<dependency>
-  		<groupId>hu.unideb.inf.dandy.szd</groupId>
-  		<artifactId>BreakDown-services</artifactId>
-  		<version>${app.version}</version>
-  	</dependency>
-  </dependencies>
-  
-  <build>
-  	<plugins>
-  		<plugin>
-  			<groupId>org.apache.maven.plugins</groupId>
-  			<artifactId>maven-ear-plugin</artifactId>
-  			<configuration>
-  				<finalName>BreakDownApp</finalName>
-  			</configuration>
-  		</plugin>
-  	</plugins>
-  </build>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>hu.unideb.inf.dandy.szd</groupId>
+		<artifactId>breakdown</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
+	</parent>
+	<artifactId>BreakDown-ear</artifactId>
+	<packaging>ear</packaging>
+
+	<dependencies>
+		<dependency>
+			<groupId>hu.unideb.inf.dandy.szd</groupId>
+			<artifactId>BreakDown-jpa</artifactId>
+			<version>${app.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>hu.unideb.inf.dandy.szd</groupId>
+			<artifactId>BreakDown-web</artifactId>
+			<version>${app.version}</version>
+			<type>war</type>
+		</dependency>
+		<dependency>
+			<groupId>hu.unideb.inf.dandy.szd</groupId>
+			<artifactId>BreakDown-services</artifactId>
+			<version>${app.version}</version>
+		</dependency>
+	</dependencies>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-ear-plugin</artifactId>
+				<configuration>
+					<finalName>BreakDownApp</finalName>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.wildfly.plugins</groupId>
+				<artifactId>wildfly-maven-plugin</artifactId>
+				<configuration>
+					<hostname>http://46.101.150.66</hostname>
+					<port>8080</port>
+					<name>postgres</name>
+					<password>dandy</password>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
