--- a/pom.xml
+++ b/pom.xml
@@ -108,7 +108,13 @@
 					<artifactId>maven-pmd-plugin</artifactId>
 					<version>3.7</version>
 				</plugin>
+				<plugin>
+					<groupId>org.wildfly.plugins</groupId>
+					<artifactId>wildfly-maven-plugin</artifactId>
+					<version>1.2.0.Alpha4</version>
+				</plugin>
 			</plugins>
+			
 		</pluginManagement>
 	</build>
 
