--- a/pom.xml
+++ b/pom.xml
@@ -6,9 +6,9 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<modules>
-		<module>BreakDown-web</module>
 		<module>BreakDown-jpa</module>
 		<module>BreakDown-services</module>
+		<module>BreakDown-web</module>
 		<module>BreakDown-ear</module>
 	</modules>
 
@@ -49,6 +49,11 @@
 				<version>1.0.1.Final</version>
 			</dependency>
 			<dependency>
+				<groupId>org.hibernate</groupId>
+				<artifactId>hibernate-core</artifactId>
+				<version>5.2.9.Final</version>
+			</dependency>
+			<dependency>
 				<groupId>org.projectlombok</groupId>
 				<artifactId>lombok</artifactId>
 				<version>1.16.14</version>
@@ -75,6 +80,11 @@
 			<dependency>
 				<groupId>org.modelmapper</groupId>
 				<artifactId>modelmapper</artifactId>
+				<version>0.7.8</version>
+			</dependency>
+			<dependency>
+				<groupId>org.modelmapper.extensions</groupId>
+				<artifactId>modelmapper-jackson</artifactId>
 				<version>0.7.8</version>
 			</dependency>
 		</dependencies>
@@ -107,11 +117,6 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-pmd-plugin</artifactId>
 					<version>3.7</version>
-				</plugin>
-				<plugin>
-					<groupId>org.wildfly.plugins</groupId>
-					<artifactId>wildfly-maven-plugin</artifactId>
-					<version>1.2.0.Alpha4</version>
 				</plugin>
 			</plugins>
 			
