--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,16 @@
 				<version>0.7.8</version>
 			</dependency>
 			<dependency>
+				<groupId>com.fasterxml.jackson.core</groupId>
+				<artifactId>jackson-core</artifactId>
+				<version>2.9.0.pr2</version>
+			</dependency>
+			<dependency>
+				<groupId>com.fasterxml.jackson.core</groupId>
+				<artifactId>jackson-databind</artifactId>
+				<version>2.9.0.pr2</version>
+			</dependency>
+			<dependency>
 				<groupId>org.modelmapper.extensions</groupId>
 				<artifactId>modelmapper-jackson</artifactId>
 				<version>0.7.8</version>
