--- a/pom.xml
+++ b/pom.xml
@@ -30,28 +30,11 @@
 				<artifactId>spring-data-jpa</artifactId>
 				<version>1.11.0.RELEASE</version>
 			</dependency>
-			<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-web -->
-			<dependency>
-				<groupId>org.springframework.security</groupId>
-				<artifactId>spring-security-web</artifactId>
-				<version>4.2.2.RELEASE</version>
-			</dependency>
-			<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-config -->
-			<dependency>
-				<groupId>org.springframework.security</groupId>
-				<artifactId>spring-security-config</artifactId>
-				<version>4.2.2.RELEASE</version>
-			</dependency>
-			<!-- https://mvnrepository.com/artifact/org.hibernate.javax.persistence/hibernate-jpa-2.0-api -->
-			<dependency>
-				<groupId>org.hibernate.javax.persistence</groupId>
-				<artifactId>hibernate-jpa-2.0-api</artifactId>
-				<version>1.0.1.Final</version>
-			</dependency>
 			<dependency>
 				<groupId>org.hibernate</groupId>
 				<artifactId>hibernate-core</artifactId>
 				<version>5.2.9.Final</version>
+				<scope>provided</scope>
 			</dependency>
 			<dependency>
 				<groupId>org.projectlombok</groupId>
@@ -122,11 +105,6 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-war-plugin</artifactId>
 					<version>3.0.0</version>
-				</plugin>
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-pmd-plugin</artifactId>
-					<version>3.7</version>
 				</plugin>
 			</plugins>
 			
