--- a/BreakDown-services/pom.xml
+++ b/BreakDown-services/pom.xml
@@ -15,6 +15,10 @@
 			<version>${app.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 		</dependency>
