--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,11 @@
 				<groupId>org.hibernate</groupId>
 				<artifactId>hibernate-core</artifactId>
 				<version>5.2.10.Final</version>
-				<scope>provided</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.hibernate</groupId>
+				<artifactId>hibernate-entitymanager</artifactId>
+				<version>5.2.10.Final</version>
 			</dependency>
 			<dependency>
 				<groupId>org.projectlombok</groupId>
